added base login information to the OAS document and the endpoint routing code
