# routes/api-router.js
@@ -1,6 +1,6 @@
 import express from 'express';
 import { getAllMessages, addNewMessage } from '../controllers/msg-api-controller.js';
-import { registerNewUser } from '../controllers/user-api-controller.js';
+import { registerNewUser, logInUser } from '../controllers/user-api-controller.js';
 import passport from 'passport';
 
 const router = express.Router();
@@ -12,5 +12,8 @@ addNewMessage);
 
 router.route('/users')
 .post(registerNewUser);
+
+router.route('/login')
+.post(logInUser);
 
 export default router;
